<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:contentPadding="16dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="8dp"
    android:background="@android:color/white"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/character_imaage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:background="@drawable/bg_rounded"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:id="@+id/ly_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@+id/character_imaage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_character"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                tools:text="Name of character" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ly_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_character"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                tools:text="Name of character" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ly_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/species_character"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                tools:text="Name of character" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ly_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gender_character"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                tools:text="Name of character" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ly_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/origin_character"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                tools:text="Name of character" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ly_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_character"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                tools:text="Name of character" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>